--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
-h1{
-    color: blue;
+html,body{
+    min-height: 100%;
+}
+
+.image{
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 100%;
+    width: 100%;
 }
