--- a/style.css
+++ b/style.css
@@ -1,11 +1,12 @@
-html,body{
-    min-height: 100%;
+#score{
+    text-align: center;
 }
 
-.image{
-    background-position: center;
-    background-repeat: no-repeat;
+#game{
+    width: 1000px;
+    height: 500px;
+    border: 2px solid black;
+    margin: auto;
+    background-image: url('https://images.unsplash.com/uploads/1412026095116d2b0c90e/3bf33993?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NzF8fG5hdHVyZXxlbnwwfDB8MHx8&auto=format&fit=crop&w=400&q=60');
     background-size: cover;
-    height: 100%;
-    width: 100%;
 }
