--- a/style.css
+++ b/style.css
@@ -10,3 +10,22 @@
     background-image: url('https://images.unsplash.com/uploads/1412026095116d2b0c90e/3bf33993?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxzZWFyY2h8NzF8fG5hdHVyZXxlbnwwfDB8MHx8&auto=format&fit=crop&w=400&q=60');
     background-size: cover;
 }
+
+#cloud{
+    height: 125px;
+    width: 90px;
+    top: 375px;
+    background-image: url('https://i.imgur.com/oE5oz6z.png');
+    position: relative;
+    background-size: cover;
+}
+
+#tonberry{
+    height: 95px;
+    width: 90px;
+    top: 285px;
+    background-image: url('https://i.imgur.com/vdgX8Jl.png');
+    position: relative;
+    background-size: cover;
+    left: 915px;
+}
