--- a/style.css
+++ b/style.css
@@ -1,9 +1,11 @@
 #score{
-    text-align: center;
+    position: absolute;
+    right: 15vmin;
+    top: 5vmin;
+    font-size: large;
 }
 
-#game{
-    width: 1000px;
+.game{
     height: 500px;
     border: 2px solid black;
     margin: auto;
@@ -28,8 +30,19 @@
     background-image: url('https://i.imgur.com/vdgX8Jl.png');
     position: relative;
     background-size: cover;
-    left: 915px;
-    animation: tonberry 1s infinite linear;
+    left: 1080px;
+    animation: tonberry 2s infinite linear; 
+}
+
+#cactuar{
+    height: 85px;
+    width: 80px;
+    top: 203px;
+    background-image: url('https://i.imgur.com/n8PcHmO.png');
+    position: relative;
+    background-size: cover;
+    left: 1080px; 
+    animation: cactuar 1.5s infinite linear;
 }
 
 /* animations */
@@ -55,9 +68,19 @@
 
 @keyframes tonberry{
     0%{
-        left: 915px;
+        left: 1080px;
     }
     100%{
-        left: -20px;
+        left: -10px;
     }
 }
+
+@keyframes cactuar{
+    0%{
+        left: 1080px;
+    }
+    100%{
+        left: -10px;
+    }
+}
+
