--- a/style.css
+++ b/style.css
@@ -36,6 +36,7 @@
     background-size: cover;
     left: 990px;
     animation: tonberry 2.3s infinite linear;
+    animation-delay: 1s;
 }
 
 #cactuar{
@@ -47,6 +48,7 @@
     background-size: cover;
     left: 990px; 
     animation: cactuar 1.7s infinite linear;
+    animation-delay: 1s;
 }
 
 #gil{
@@ -57,7 +59,7 @@
     position: relative;
     background-size: cover;
     left: 1030px;
-    animation: gil 3s infinite linear;
+    animation: gil 3s infinite linear;animation-delay: 1s;
 }
 
 /* animations */
