added high score placement in game screen

--- a/style.css
+++ b/style.css
@@ -1,11 +1,15 @@
 #score{
-    /* position:fixed;
-    right: 30vmin;
-    top: 5vmin;
-    font-size: large; */
     position: relative;
     left: 1000px;
     top: -300px;
+    font-size: 20px;
+}
+
+#highScore{
+    position: relative;
+    left: 20px;
+    top: -300px;
+    font-size: 20px;
 }
 
 .game{
@@ -35,9 +39,9 @@
     position: relative;
     background-size: cover;
     left: 990px;
-    animation: tonberry 2.3s infinite linear;
+/*     animation: tonberry 2.3s infinite linear;
     animation-play-state: running;
-    animation-delay: 1s;
+    animation-delay: 1s; */
 }
 
 #cactuar{
@@ -48,9 +52,9 @@
     position: relative;
     background-size: cover;
     left: 990px; 
-    animation: cactuar 1.7s infinite linear;
+/*     animation: cactuar 1.7s infinite linear;
     animation-play-state: running;
-    animation-delay: 1s;
+    animation-delay: 1s; */
 }
 
 #gil{
@@ -61,7 +65,7 @@
     position: relative;
     background-size: cover;
     left: 1030px;
-    animation: gil 3s infinite linear;animation-delay: 1s;
+/*     animation: gil 3s infinite linear;animation-delay: 1s; */
 }
 
 /* animations */
