--- a/style.css
+++ b/style.css
@@ -52,9 +52,9 @@
     position: relative;
     background-size: cover;
     left: 990px; 
-/*     animation: cactuar 1.7s infinite linear;
+    animation: cactuar 1.7s infinite linear;
     animation-play-state: running;
-    animation-delay: 1s; */
+    animation-delay: 1s;
 }
 
 #gil{
@@ -65,7 +65,7 @@
     position: relative;
     background-size: cover;
     left: 1030px;
-/*     animation: gil 3s infinite linear;animation-delay: 1s; */
+    animation: gil 3s infinite linear;animation-delay: 1s;
 }
 
 /* animations */
