--- a/css/highScore.css
+++ b/css/highScore.css
@@ -3,20 +3,18 @@
 .scoreBoard{
     width: 1080px;
     height: 500px;
-    border: 2px solid black;
-    margin: auto;
-    background-color: black;
+    border: 15px solid black;
+    background-color: blue;
     background-size: cover;
     background-position: center;
+    padding: 5px solid white;
     color: white;
     font-family: 'Press Start 2P', cursive;
 }
 
 #highScore{
     text-align: center;
-    border: 5px solid white;
-    background-color: blue;
-    padding: 70px;
+    padding: 70px 0 20px 0;
     margin: 10% 0px 0px;
 }
 
