--- a/css/titleScreen.css
+++ b/css/titleScreen.css
@@ -25,5 +25,12 @@
     display: block;
     text-decoration: none;
     color: white;
-    padding: 15px;
+    padding: 20px;
+}
+
+#highScore{
+    text-align: center;
+    display: block;
+    text-decoration: none;
+    color: white;
 }
