--- a/css/highScore.css
+++ b/css/highScore.css
@@ -4,6 +4,7 @@
     width: 1080px;
     height: 500px;
     border: 15px solid black;
+    margin: auto;
     background-color: blue;
     background-size: cover;
     background-position: center;
