--- a/style.css
+++ b/style.css
@@ -4,11 +4,13 @@
     top: -300px;
     font-size: 20px;
 }
-
 #highScore{
+    display: none;
+}
+#scoreBoard{
     position: relative;
-    left: 20px;
-    top: -300px;
+    left: 980px;
+    top: -370px;
     font-size: 20px;
 }
 
@@ -39,7 +41,7 @@
     position: relative;
     background-size: cover;
     left: 990px;
-/*     animation: tonberry 2.3s infinite linear;
+    /* animation: tonberry 2.3s infinite linear;
     animation-play-state: running;
     animation-delay: 1s; */
 }
