--- a/style.css
+++ b/style.css
@@ -41,10 +41,11 @@
     position: relative;
     background-size: cover;
     left: 990px;
-    animation: tonberry 2.3s infinite linear;
+/*     animation: tonberry 2.3s infinite linear;
     animation-play-state: running;
     animation-delay: 1s;
-}
+    */
+} 
 
 #cactuar{
     height: 85px;
@@ -54,9 +55,9 @@
     position: relative;
     background-size: cover;
     left: 990px; 
-    animation: cactuar 1.7s infinite linear;
+ /*    animation: cactuar 1.7s infinite linear;
     animation-play-state: running;
-    animation-delay: 1s;
+    animation-delay: 1s; */
 }
 
 #gil{
