--- a/css/highScore.css
+++ b/css/highScore.css
@@ -5,18 +5,26 @@
     height: 500px;
     border: 15px solid black;
     margin: auto;
-    background-color: blue;
+    background-color: black;
     background-size: cover;
     background-position: center;
-    padding: 5px solid white;
     color: white;
     font-family: 'Press Start 2P', cursive;
+}
+
+.background{
+    border: 5px solid white;
+    height: 250px;
+    width: 500px;
+    display: block;
+    margin: auto;
+    background-color: blue;
 }
 
 #highScore{
     text-align: center;
     padding: 70px 0 20px 0;
-    margin: 10% 0px 0px;
+    margin: 8% 0px 0px;
 }
 
 #currentScore{
@@ -30,5 +38,6 @@
     display: block;
     text-decoration: none;
     color: white;
-    margin: 10% 0px 0px;
+    margin: 35% 0px 0px;
 }
+
